<resources>
    <string name="app_name">TreeSpot</string>
    <string name="login">Login</string>
    <string name="register_account">Register Account</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="my_spots">My Spots</string>
    <string name="my_friends">My Friends</string>
    <string name="capture_spot">Capture Spot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="message_verify_email">Before continuing, we need to verify %s belongs to you</string>
    <string name="your_2_factor_code">Your 2 Factor Code</string>
    <string name="verify_account">Verify Account</string>
    <string name="your_confirmation_code">Your Confirmation Code</string>
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="capture_tree_spot">Capture Tree Spot</string>
    <string name="hint_username_or_email_address">Username or Email Address</string>
    <string name="this_spot_s_name">This spot\'s name</string>
    <string name="different_public_and_private_names">Different Public and Private Names?</string>
    <string name="this_spot_s_private_name">This spot\'s private name</string>
    <string name="channel_name">ts_not_channel</string>
    <string name="channel_description">TreeSpot Main Notification Channel</string>
    <string name="reset_password"><u>Reset Password</u></string>
    <string name="add_spot">Add Spot!</string>
    <string name="friends_since">Friends Since:</string>
    <string name="joined">Joined:</string>
    <string name="user_s_tree_spots">User\'s Tree Spots</string>
    <string name="view_location_in_google_maps">View Location in Google Maps</string>
    <string name="share_within_treespot">Share within TreeSpot</string>
    <string name="share_else_where">Share else where</string>
    <string name="share_spot_with_friends">Share Spot With Friends!</string>
    <string name="share_sheet_title">Share Tree Spot With Others!</string>
    <string name="all_spots_on_map">All Spots On Map</string>
    <string name="settings">Settings</string>
    <string name="attach_video_to_this_new_spot">Attach Video To This New Spot!</string>
</resources>