<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/menu_main_capture_action"-->
<!--        android:title="Add Tree Spot"-->
<!--        app:showAsAction="always"-->
<!--        android:icon="@drawable/ic_add_location_alt"-->
<!--        app:iconTint="@color/md_white_1000" />-->

    <item
        android:id="@+id/menu_main_capture_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        app:iconTint="@color/md_white_1000"/>


    <item
        android:id="@+id/menu_main_friends_add"
        android:title="@string/add_friend"
        app:iconTint="@color/md_white_1000"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/manu_main_spots_all"
        android:title="@string/all_spots_on_map"
        android:iconTint="@color/md_white_1000"
        android:icon="@drawable/ic_map"
        app:showAsAction="always"/>

</menu>